接入fastgpt智能体

--- a/web/package.json
+++ b/web/package.json
@@ -18,17 +18,18 @@
     "element-plus": "^2.3.0",
     "element-resize-detector": "^1.2.4",
     "good-storage": "^1.1.1",
-    "highlight.js": "^11.7.0",
+    "highlight.js": "^11.10.0",
     "json-bigint": "^1.0.0",
     "less-loader": "^3.0.0",
     "lodash": "^4.17.21",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "md-editor-v3": "^2.2.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "qrcode": "^1.5.3",
     "qs": "^6.11.1",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.8.0",
     "socket.io-client": "^4.6.1",
     "sortablejs": "^1.15.0",
     "v3-waterfall": "^1.2.1",
