--- a/web/.env.production
+++ b/web/.env.production
@@ -1,7 +1,8 @@
 VUE_APP_API_HOST=https://wxzs.allschool.cn/app-api
 VUE_APP_WS_HOST=wss://wxzs.allschool.cn/
 VUE_APP_KEY_PREFIX=ChatPLUS_
-VUE_APP_TITLE="云之AI"
+VUE_APP_TITLE=云之AI
+VUE_APP_RELOGIN_URL="https://auth.xiaoyuanhao.com/xyhauth/open/router?callbackurl=https%3A%2F%2Fwxzs.allschool.cn%2Ftxrobot%2Flogin"
 WS_BASE_URL='wss://wss.lke.cloud.tencent.com'
 API_BASE_URL='https://lke.cloud.tencent.com/cgi/capi'
 PUBLIC_PATH='https://qbot-source-online-1251316161.cos.ap-guangzhou.myqcloud.com/SmartWebim/'
