--- a/web/.env.development
+++ b/web/.env.development
@@ -4,8 +4,9 @@ VUE_APP_USER=18575670125
 VUE_APP_PASS=12345678
 VUE_APP_ADMIN_USER=admin
 VUE_APP_ADMIN_PASS=admin123
+VUE_APP_RELOGIN_URL="https://auth.xiaoyuanhao.com/xyhauth/open/router?callbackurl=http%3A%2F%2Flocalhost%3A8888%2Flogin"
 VUE_APP_KEY_PREFIX=ChatPLUS_DEV_
-VUE_APP_TITLE="云之AI"
+VUE_APP_TITLE=云之AI
 WS_BASE_URL='wss://wss.lke.cloud.tencent.com'
 API_BASE_URL='https://lke.cloud.tencent.com/cgi/capi'
 PUBLIC_PATH='https://qbot-source-online-1251316161.cos.ap-guangzhou.myqcloud.com/SmartWebim/'
